# adam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  adam_bootstrapper.ps1  adam_bootstrapper.sh  build.ps1  build.sh  test-release.sh  test.sh
.github/workflows/: main.yml
assets/: adam_logo_2048x2048.psd  adam_logo_pa.aseprite  object_base_manifest.toml  object_edit_manifest.toml  object_view_manifest.toml
docs/: CONFIG_FILE_GUIDE.md  RELEASING_CHECKLIST.md
src/: clap.rs  edit.rs  gm.rs  gm_artifacts.rs  igor.rs  input.rs  main.rs  manifest.rs  project_editing.rs  runner.rs  trailing_comma_util.rs
src/gm_artifacts/: build.rs  build_bff.rs  macros.rs  platform.rs  preferences.rs  steam_options.rs  target_options.rs
src/igor/: application_data.rs  build.rs  user_data.rs
src/input/: cli.rs  config_file.rs  get_input.rs  inputs.rs  manifest.rs
src/project_editing/: folders.rs  object.rs  reserialize.rs  script.rs  shader.rs  vfs.rs
src/runner/: ac_styler.rs  cache.rs  check_options.rs  compiler_handler.rs  gm_uri_parse.rs  invoke_nix.rs  invoke_win.rs  mod.rs  printer.rs  run.rs  run_options.rs
