[package]
name = "adam"
version = "0.2.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"
description = "A command-line interface for compiling Gms2 projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NPC-Studio/adam"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

clap = "3.0.0-beta.2"
directories = "3.0"
anyhow = "1.0"

console = "0.12"
indicatif = "0.15"
heck = "0.3.1"
walkdir = "2.3"
filetime = "0.2"
regex = "1.3"
once_cell = "1.4"
aho-corasick = "0.7"
maplit = "1.0"
