[package]
name = "adam"
version = "0.9.1"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2021"
description = "A command-line interface for compiling Gms2 projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NPC-Studio/adam"
readme = "README.md"

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
toml = "0.7.3"
confy = "0.5.1"
yy-boss = "0.9.3"
yy-typings = "0.7.3"

clap = { version = "4.4", features = ["derive", "cargo"] }

directories = "5.0.0"
color-eyre = "0.6.2"
camino = { version = "1.1.4", features = ["serde1"] }

console = "0.15.5"
indicatif = "0.17.3"
heck = "0.4.1"
walkdir = "2.3.3"
filetime = "0.2.20"
regex = "1.7.3"
once_cell = "1.17.1"
aho-corasick = "0.7.20"
rustc-hash = "1.1.0"
dunce = "1.0.3"
const_format = "0.2.30"
gml_log_parser = "0.1.1"

sysinfo = "0.28.4"

ctrlc = { version = "3.2.5", features = ["termination"] }
colored = "2.0.4"
toml_edit = "0.20.1"

[target.'cfg(not(windows))'.dependencies]
interprocess = "1.2.1"
